# hddm_s

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  publish.yml
actions/: build_wheels.yml  make_sdist.yml  upload_all.yml
gluex/hddm_s/: event.xml
gluex/xrootd_client/: __init__.py
hddm_s/: __init__.py
scripts/: cygwin_installer.bat  dependents.py  inspect_wheel.sh  install_cmake.bat  local_test_build.sh
