[build-system]
requires = ["setuptools >= 38.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hddm_s"
version = "2.0.42"
requires-python = ">= 3.6"
authors = [
  {name = "Richard T. Jones", email = "richard.t.jones@uconn.edu"},
]
maintainers = [
  {name = "Richard T. Jones", email = "richard.t.jones@uconn.edu"},
]
description = "methods for reading and writing GlueX simulated event data"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["hddm", "GlueX", "Gluex", "gluex", "hdgeant4", "hdgeant"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/rjones30/hddm_s"
Documentation = "https://github.com/rjones30/hddm_s"
Repository = "https://github.com/rjones30/hddm_s"
Issues = "https://github.com/rjones30/hddm_s/issues"
Changelog = "https://github.com/rjones30/hddm_s/issues/main/CHANGELOG.md"
